cloudformation/infrastructure.yml
Parameters:
  # Leaving this wide open to help meet the external parameters requirement of the project.
  # The cli doesn't accept both parameter files and parameter variables.
  #BastionAllowedIP:
  #  Type: String
  #  Description: The CIDR that will be granted SSH access to the bastion

  InstanceType:
    Type: String
    Description: The instance type for app servers

  AMI:
    Type: String
    Description: App instance AMI

Resources:

  #
  # Bastion
  #
  BastionSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Bastion instance security group
      GroupName: bastion-sg
      VpcId:
        Fn::ImportValue: VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          #CidrIp: !Join ['', [!Ref BastionAllowedIP, '/32']]
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0

  Bastion:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-09d8b5222f2b93bf0
      KeyName: bastion-key
      InstanceType: t3.small
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          GroupSet:
            - Ref: "BastionSG"
          SubnetId:
            Fn::ImportValue: PublicSubnetOne
      Tags:
        - Key: Name
          Value: bastion

  #
  # S3
  #
  AppBucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Sub 'udacity-project-2-app-${AWS::Region}'
      BucketEncryption:
        ServerSideEncryptionConfiguration:
          - ServerSideEncryptionByDefault:
              SSEAlgorithm: AES256
    DeletionPolicy: Delete

  #
  # ALB
  #
  ALBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ALB security group
      GroupName: lb-sg
      VpcId:
        Fn::ImportValue: VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0

  ALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      IpAddressType: ipv4
      Name: udagram-lb
      Scheme: internet-facing
      SecurityGroups:
        - !Ref ALBSG
      Subnets:
        - Fn::ImportValue: PublicSubnetOne
        - Fn::ImportValue: PublicSubnetTwo
      Type: application

  HTTPlistener:
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroup
      LoadBalancerArn: !Ref ALB
      Port: 80
      Protocol: "HTTP"

  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: app-trgt-grp
      Port: 80
      Protocol: HTTP
      HealthCheckPort: 80
      HealthCheckProtocol: HTTP
      VpcId:
        Fn::ImportValue: VPCID

  #
  # ASG
  #
  AppRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - ec2.amazonaws.com
          Action:
          - sts:AssumeRole
      Path: /

  AppRolePolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: root
      PolicyDocument:
        Version: 2012-10-17
        Statement:
        - Effect: Allow
          Action: s3:*
          Resource: !Join
            - ''
            - - !GetAtt AppBucket.Arn
              - /*
      Roles:
      - !Ref AppRole

  AppInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
      - !Ref AppRole

  AppInstanceSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: App instance security group
      GroupName: app-instance-sg
      VpcId:
        Fn::ImportValue: VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 10.0.0.0/16
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0

  LaunchConfig: 
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties: 
      ImageId:
        Ref: AMI
      InstanceType: 
        Ref: InstanceType
      IamInstanceProfile: 
        Ref: AppInstanceProfile
      SecurityGroups:
        - !Ref AppInstanceSG
      BlockDeviceMappings: 
        - DeviceName: /dev/sda1
          Ebs: 
            VolumeSize: 10
            VolumeType: gp2
            DeleteOnTermination: true
      UserData: !Base64 |
        #!/bin/bash
        yum -y update
        yum -y install httpd
        service httpd start
        cd /var/www/html
        echo 'it works! Udagram, Udacity' > index.html

  ASG:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      VPCZoneIdentifier:
        - Fn::ImportValue: PrivateSubnetOne
        - Fn::ImportValue: PrivateSubnetTwo
      LaunchConfigurationName: !Ref LaunchConfig
      MinSize: 4
      MaxSize: 8
      TargetGroupARNs:
        - !Ref TargetGroup


Outputs:
  BastionIP:
    Value: !GetAtt Bastion.PublicIp

  LBName:
    Value: !GetAtt ALB.DNSName
